plugins {
    id("java")
    id("org.jetbrains.intellij") version "1.17.3"
}

group 'com.chuntung.plugin'
version "${version}"

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
}

intellij {
    pluginName = "MyBatis Builder"
    version = ideaVersion
    plugins = ["java"]
    sameSinceUntilBuild = Boolean.valueOf(isEAP)
    patchPluginXml {
        untilBuild = customUtilBuild
        changeNotes = "${new File('changeNotes.txt').getText('UTF-8')}"
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = "17"
    targetCompatibility = "17"
}

sourceSets {
    test {
        java {
            exclude '**/example'
            exclude '**/MybatisBuilderServiceTest.java'
            exclude '**/GeneratorToolWrapperTest.java'
        }
    }

    main {
        java {
            exclude '**/support'
        }
    }
}

dependencies {
    implementation( group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '2.0.0') {
        exclude group: 'org.junit.jupiter'
        exclude group: 'org.junit.platform'
        exclude group: 'org.assertj'
    }
    // must match the version MBG 2.0.0 was built against (javaparser-core is provided/optional in its pom);
    // older versions lack DefaultLexicalPreservingPrinter, which the Java file merger requires at runtime
    implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.28.0'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.10'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.47'

    testImplementation('com.h2database:h2:1.4.200')
    testImplementation('org.mybatis:mybatis:3.5.9')
    testImplementation("org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.5.0")
}
